<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="参考答案"
            android:textColor="#C261AA"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/activity_size_10"
        android:layout_marginRight="@dimen/activity_size_10"
        android:background="@color/indicator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_70"
        android:layout_marginTop="@dimen/activity_size_10"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.0"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_question_answer_text"
                    android:textColor="#C261AA"
                    android:textSize="@dimen/text_size_35" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_question_answer"
                    android:textColor="@color/btn_gray_normal"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/corrent_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sure_question_answer_text"
                    android:textColor="#C261AA"
                    android:textSize="@dimen/text_size_35" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sure_question_answer"
                    android:textColor="@color/btn_gray_normal"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">


                <RatingBar
                    android:id="@+id/room_ratingbar"
                    style="@style/myratingbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="3"
                    android:rating="0" />

                <RatingBar
                    android:id="@+id/room_second_ratingbar"
                    style="@style/myratingbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="2"
                    android:rating="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_difficulty"
                    android:textColor="@color/btn_gray_normal"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal">
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_analysis"
        android:layout_marginLeft="@dimen/activity_size_10"
        android:textColor="#C261AA"
        android:layout_marginTop="@dimen/activity_size_10"
        android:textSize="@dimen/text_size_14"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_size_10"
        android:layout_marginRight="@dimen/activity_size_10"
        android:layout_marginTop="@dimen/activity_size_10"
        >
    <TextView
        android:id="@+id/question_analysis_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="@dimen/text_size_14"
        />
    </LinearLayout>
</LinearLayout>
