<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F1F1F1"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#fff"
        android:gravity="center"
        android:text="学习"
        android:textColor="@color/indicator"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/indicator"></View>
    <chinanurse.cn.nurse.list.WaveSwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_swipe"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="188dip"
                >
                <com.youth.banner.Banner
                    android:id="@+id/banner1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    />
                <TextView
                    android:id="@+id/tv_jiaziashibai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="加载失败，请重新加载..."
                    android:textSize="@dimen/text_size_20"
                    android:textColor="@color/purple"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/stu_paper_nurse"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/study_image8"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_benzi" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image8"
                    android:text="@string/stu_paper_nurse_text" />

                <ImageView
                    android:id="@+id/go"
                    style="@style/study_image_right" />
                <TextView
                    android:id="@+id/stu_paper_num"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/activity_size_20"
                    android:background="@drawable/question_sheet_dot_violet"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/go"
                    android:layout_marginRight="@dimen/activity_size_20"
                    android:text="0"
                    android:visibility="gone"
                    android:paddingLeft="@dimen/activity_size_5"
                    android:paddingRight="@dimen/activity_size_5"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stu_every_relation_title"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/study_image"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_bi" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image"
                    android:text="@string/stu_every_relation_title_text"
                    />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stu_Goman_topic_bank"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="1dp">

                <ImageView
                    android:id="@+id/study_image2"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_fuzhi" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image2"
                    android:text="@string/stu_Goman_topic_bank_text" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stu_online_test"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="1dp">

                <ImageView
                    android:id="@+id/study_image3"
                    style="@style/study_image_left"
                    android:src="@mipmap/zaixiankaishi" />

                <ImageView style="@style/study_image_right" />

                <TextView
                    style="@style/study_textview"
                    android:text="@string/stu_online_test_text"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/textView5" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stu_goabroad_test"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/study_image4"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_plane" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image4"
                    android:text="@string/stu_goabroad_test_text" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stu_clinic_nurse"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/study_image5"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_hushi" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image5"
                    android:text="@string/stu_clinic_nurse_text" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stu_fifty_nurse_operation"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="1dp">

                <ImageView
                    android:id="@+id/study_image6"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_zhen" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image6"
                    android:text="@string/stu_fifty_nurse_operation_text" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stu_test_book"
                style="@style/study_RelativeLayout"
                android:layout_marginTop="1dp">

                <ImageView
                    android:id="@+id/study_image7"
                    style="@style/study_image_left"
                    android:src="@mipmap/ic_book" />

                <TextView
                    style="@style/study_textview"
                    android:layout_toRightOf="@id/study_image7"
                    android:text="@string/stu_test_book_text" />

                <ImageView style="@style/study_image_right" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    </chinanurse.cn.nurse.list.WaveSwipeRefreshLayout>
</LinearLayout>
